...
            )

            Spacer(modifier = Modifier.height(20.dp))

            OutlinedTextField(
                value = titulo, onValueChange = { titulo = it },
                label = { Text("Título del partido") },
                modifier = Modifier.fillMaxWidth(),
                colors = textFieldColors
            )
            Spacer(modifier = Modifier.height(16.dp))

            // FECHA CON PICKER
...
                colors = textFieldColors
            )
            Spacer(modifier = Modifier.height(16.dp))

            OutlinedTextField(
                value = lugar, onValueChange = { lugar = it },
                label = { Text("Lugar") },
                modifier = Modifier.fillMaxWidth(),
                colors = textFieldColors
            )
            Spacer(modifier = Modifier.height(16.dp))

            OutlinedTextField(
...
