...
                    textAlign = TextAlign.Center
                )

                Spacer(modifier = Modifier.height(28.dp))

                Text(
                    text = "Nombre completo",
                    fontSize = 14.sp,
                    fontWeight = FontWeight.Medium,
                    color = Color.Black,
                    modifier = Modifier.fillMaxWidth()
                )

...
                        text = "¿Ya tenés cuenta? ",
                        color = GrayMedium,
                        fontSize = 14.sp
                    )

                    Text(
                        text = "Iniciar sesión",
                        color = GreenPrimary,
                        fontWeight = FontWeight.Bold,
                        fontSize = 14.sp,
                        modifier = Modifier.clickable { onBackClick() }
                    )
                }
...
