...
            )

            Spacer(modifier = Modifier.height(30.dp))

            // CAMPO EMAIL
            Text(
                text = "Correo electrónico",
                modifier = Modifier.fillMaxWidth(),
                fontWeight = FontWeight.SemiBold,
                fontSize = 14.sp,
                color = Color.Black
            )
            Spacer(modifier = Modifier.height(6.dp))
...
            )

            Spacer(modifier = Modifier.height(16.dp))

            // CAMPO CONTRASEÑA
            Text(
                text = "Contraseña",
                modifier = Modifier.fillMaxWidth(),
                fontWeight = FontWeight.SemiBold,
                fontSize = 14.sp,
                color = Color.Black
            )
            Spacer(modifier = Modifier.height(6.dp))
...
